css/theme.css
/* ... */
.cherga_price_slider_range {
	width: 100%;
	height: 100%;
	border-radius: 1em;
	background: #ffbf00;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
}

.cherga_price_slider_handle {
	width: 1em;
	height: 1em;
	background: #ffbf00;
	border-radius: 1em;
	margin-left: -.5em;
	position: absolute;
	top: -.3em;
	left: 0;
	z-index: 2;
}

.cherga_price_slider_handle:last-child {
	left: 100%;
}

.cherga_price_slider_amount button {
	min-height: 50px;
	font-size: 14px;
	line-height: 20px;
	letter-spacing: .6px;
	text-transform: uppercase;
	color: #ffffff;
	background: #3a3e43;
	border-radius: 0;
	padding: 15px 20px;
	float: left;
}

.cherga_price_label {
	text-align: right;
}

/* ---------------------------------- */
/* ---------- Blog Listing ---------- */
/* ---------------------------------- */
.cherga_post_listing_title:empty,
.cherga_post_listing_title a:empty {
	display: none;
}
.sticky .cherga_sticky_marker {
	margin-right: 0px;
	transform: translateY(-1px) scale(0.75);
}
.cherga_element_blog  .standard_post_item {
	padding-top: 60px;
}
.cherga_element_blog  .standard_post_item:first-child {
	padding-top: 0;
}
.cherga_post_formats.cherga_pf_fullwidth,
.cherga_post_formats.cherga_pf_standard {
	text-align: center;
}
.cherga_post_formats.cherga_pf_fullwidth iframe {
	width: 100%;
}
.cherga_pf_standard_cont img {
	display: block;
	max-width: 100%;
	height: auto;
	margin: 0 auto;
}
body .standard_post_item .cherga_post_formats {
	margin-bottom: 24px;
}
.cherga_post_formats.cherga_pf_image .owl-stage-outer {
	position: relative;
}
.cherga_post_formats.cherga_pf_image .owl-stage-outer:after,
.cherga_post_formats.cherga_pf_image .owl-stage-outer:before {
	content: '';
	width: 100px;
	height: 100%;
	display: block;
	position: absolute;
	z-index: 10;
}
.cherga_post_formats.cherga_pf_image .owl-stage-outer:before {
	left: 0;
	top: 0;
}
.cherga_post_formats.cherga_pf_image .owl-stage-outer:after {
	right: 0;
	top: 0;
}
.cherga_pf_gallery {
	font-size: 0;
	line-height: 0;
	position: relative;
}
.cherga_pf_gallery .cherga_pf_gallery {
	margin: -5px;
}
.cherga_post_formats.cherga_pf_fullwidth .cherga_pf_gallery {
	margin: -5px 5px;
}
.cherga_pf_gallery .cherga_pf_gallery_item {
	position: relative;
	display: inline-block;
	vertical-align: top;
	padding: 5px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}
.cherga_pf_gallery .cherga_pf_gallery_item a,
.cherga_pf_gallery .cherga_pf_gallery_item img {
	display: block;
}
.cherga_pf_gallery .cherga_pf_gallery_item a {
	position: relative;
}
.cherga_featured_posts .cherga_posts_item .cherga_fimage_cont a:before,
.cherga_pf_gallery .cherga_pf_gallery_item a:before,
.cherga_grid_blog_item a.cherga_grid_blog_image:before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	display: block;
	left: 0;
	top: 0;
	transition: opacity 400ms;
}
.cherga_pf_gallery2 .cherga_pf_gallery_item {
	width: 50%;
}
.cherga_pf_gallery3 .cherga_pf_gallery_item {
	width: 33.33%;
}
.cherga_pf_gallery4 .cherga_pf_gallery_item {
	width: 25%;
}
.cherga_pf_gallery5 .cherga_pf_gallery_item {
	width: 20%;
}
.cherga_post_meta {
	font-size: 0;
	line-height: 0;
	margin-bottom: 7px;
}
.cherga_post_meta_item {
	display: inline-block;
	text-transform: uppercase;
	margin-left: 21px;
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	line-height: 24px;
	letter-spacing: 1px;
	font-weight: 400;
	color: #ffffff;
	max-width: 100%;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.cherga_post_meta .cherga_post_meta_item {
	margin-left: 15px;
}
.cherga_post_meta .cherga_post_meta_item:before {
	content: '\00b7';
	display: inline-block;
	margin-right: 15px;
	font-weight: bold;
}
.cherga_post_meta div.cherga_post_meta_item:first-child {
	margin-left: 0;
}
.cherga_post_meta div.cherga_post_meta_item:first-child:before {
	display: none;
}
.cherga_post_listing_title {
	margin:0 0 18px -1px;
	letter-spacing: 0.1px;
}
a.cherga_read_more_button {
	transition: background 400ms;
	display: inline-block;
	padding:12px 20px 12px 19px;
	letter-spacing: 0.6px;
	text-transform: uppercase;
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	line-height: 24px;
	font-weight: 400;
	color: #ffffff;
	background: #3a3e43;
}
body .standard_post_item .cherga_excerpt {
	margin-bottom:24px;
}
.cherga_read_more_button:before {
	display: none!important;
}

/* --- Grid Blog --- */
.cherga_grid_blog_listing_cont {
	position:relative;
	font-size: 0;
	line-height: 0;
	margin: -15px;
}
.cherga_grid_blog_listing_cont .cherga_grid_blog_item {
	width: 33.33%;
	display: inline-block;
	vertical-align: top;
	padding: 15px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}
.cherga_grid_blog_2columns.cherga_grid_blog_listing_cont .cherga_grid_blog_item {
	width: 50%;
}
.cherga_grid_blog_3columns.cherga_grid_blog_listing_cont .cherga_grid_blog_item {
	width: 33.33%;
}
.cherga_grid_blog_4columns.cherga_grid_blog_listing_cont .cherga_grid_blog_item {
	width: 25%;
}
.cherga_grid_blog_5columns.cherga_grid_blog_listing_cont .cherga_grid_blog_item {
	width: 20%;
}
.cherga_grid_blog_listing_cont .cherga_grid_blog_item img {
	display: block;
	margin-bottom: 24px;
}
.cherga_grid_blog_item a.cherga_grid_blog_image {
	position: relative;
	display: block;
}
.cherga_grid_blog_item .cherga_post_content {
	text-align: center;
}
.cherga_grid_blog_item .cherga_post_meta {
	margin-bottom: 6px;
	font-family: "Roboto", sans-serif;
	font-size: 14px;
	line-height: 24px;
	font-weight: 400;
	color: #ffffff;
}
.cherga_grid_blog_item .cherga_post_title {
	margin-bottom: 18px;
	letter-spacing: -0.1px;
}
.cherga_grid_blog_item .cherga_post_excerpt {
	padding-bottom:24px;
	font-size: 16px;
	line-height: 26px;
}
.cherga_grid_blog_item {
	transition: opacity 500ms;
}
.cherga_grid_blog_item.cherga_grid_blog_loading {
	opacity: 0 !important;
	transform: translateY(50px);
}
.cherga_button.grid_blog_trigger {
	position: relative;
}
/* ... */

